@@ -2,6 +2,12 @@
 \name{NEWS}
 \title{NEWS file for the tram package}
 
+\section{Changes in Version 0.4-0 (2020-05-11)}{
+  \itemize{
+    \item{Add \code{Aareg} for Aalen additive hazard models.}
+  }
+}
+
 \section{Changes in Version 0.3-3 (2020-01-16)}{
   \itemize{
     \item{\code{score_test} generic and method added for computing 
@@ -12,6 +18,7 @@
           vice versa.}
   }
 }
+
 
 \section{Changes in Version 0.3-2 (2020-01-08)}{
   \itemize{
